# tanaad

./: Cargo.toml  README.md  package.json  tauri.conf.json  tsconfig.json
.github/workflows/: build-windows.yml
docs/: architecture.md  blueprint_verification_report.md  data-model.md  implementation-plan.md
installer/nsis/: installer.nsi
migrations/: V1__init.sql  sqlcipher_config.sql
scripts/: build-installer.sh  build-usb-installer-config.json  register-autostart-macos.sh  register-autostart-windows.ps1
sql/: schema.md
src/: App.tsx  index.html  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  db.rs  heartbeat.rs  installer.rs  keychain.rs  main.rs  pairing.rs  receiver.rs  sync_engine.rs  telegram.rs
src/components/AdminDashboard/: Dashboard.tsx  Settings.tsx
src/components/Auth/: Login.tsx  PinEntry.tsx
src/components/Bubble/: Bubble.css  Bubble.tsx
src/components/FloatingPanel/: Panel.css  Panel.tsx
src/components/Ledgers/: CustomerVault.tsx  DailyPreset.tsx  NeighborCash.tsx  NeighborInventory.tsx  ShopOperations.tsx
src/components/Shared/: Confirm.tsx  Modal.tsx  Toast.tsx
src/hooks/: useHeartbeat.ts
src/i18n/: en.json  index.ts  so.json
src/services/: keychain.ts  outbox.ts  pairing.ts  sync-service.ts  tauri-api.ts  telegram-client.ts
src/stores/: authStore.ts  ledgerStore.ts  uiStore.ts
src/styles/: global.css
tools/: hmac_helper.rs  qr-generator.rs
